--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <style>body { margin: 0; padding: 0; background-color: #303030;}</style>
     <title>React App</title>
   </head>
   <body>
